Update cloudbuild.yaml with Secret Manager integration

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,19 +7,23 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/expense-tracker']
 
-  # Deploy to Cloud Run
+  # Deploy to Cloud Run with Secret Manager reference
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
       [
-        'run', 'deploy', 'expense-tracker',
-        '--image', 'gcr.io/$PROJECT_ID/expense-tracker',
-        '--region', 'us-east1',
-        '--platform', 'managed',
-        '--allow-unauthenticated',
-        '--add-cloudsql-instances', 'expense-tracker-ryan:us-east1:expense-db',
-        '--set-env-vars', 'DB_USER=postgres,DB_PASS=Snoopy12!,DB_NAME=expense_db,INSTANCE_CONNECTION_NAME=expense-tracker-ryan:us-east1:expense-db'
+        "run", "deploy", "expense-tracker",
+        "--image", "gcr.io/$PROJECT_ID/expense-tracker",
+        "--region", "us-east1",
+        "--platform", "managed",
+        "--allow-unauthenticated",
+        "--add-cloudsql-instances", "expense-tracker-ryan:us-east1:expense-db",
+        "--set-env-vars", "DB_USER=postgres,DB_NAME=expense_db,INSTANCE_CONNECTION_NAME=expense-tracker-ryan:us-east1:expense-db",
+        "--set-secrets", "DB_PASS=expense-db-pass:latest"
       ]
 
 images:
-  - 'gcr.io/$PROJECT_ID/expense-tracker'
+  - "gcr.io/$PROJECT_ID/expense-tracker"
+
+options:
+  logging: CLOUD_LOGGING_ONLY
