Add Maven step to Cloud Build

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,17 @@
 steps:
-  # Build the container image
+  # Step 1: Build the JAR with Maven
+  - name: 'gcr.io/cloud-builders/mvn'
+    args: ['clean', 'package', '-DskipTests']
+
+  # Step 2: Build the container image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/expense-tracker', '.']
 
-  # Push to Artifact Registry
+  # Step 3: Push to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/expense-tracker']
 
-  # Deploy to Cloud Run with Secret Manager reference
+  # Step 4: Deploy to Cloud Run with Secret Manager
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
