--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # PostgreSQL via Cloud SQL Socket Factory
-spring.datasource.url=jdbc:postgresql:///${DB_NAME}?cloudSqlInstance=${INSTANCE_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.postgres.SocketFactory
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=jdbc:postgresql:///expense_db?cloudSqlInstance=expense-tracker-ryan:us-east1:expense-db&socketFactory=com.google.cloud.sql.postgres.SocketFactory
+spring.datasource.username=postgres
+spring.datasource.password=Snoopy12!
 
 # JPA / Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
@@ -10,4 +10,3 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Optional: App port (Cloud Run uses PORT env var)
 server.port=${PORT:8080}
-
