--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,30 +1,29 @@
 steps:
-  steps:
-    # Step 0: Build the JAR with Maven
-    - name: 'gcr.io/cloud-builders/maven'
-      args: ['clean', 'package', '-DskipTests']
+  # Build the JAR with Maven
+  - name: 'gcr.io/cloud-builders/mvn'
+    args: ['clean', 'package', '-DskipTests']
 
-    # Step 1: Build the container image
-    - name: 'gcr.io/cloud-builders/docker'
-      args: ['build', '-t', 'gcr.io/$PROJECT_ID/expense-tracker', '.']
+  # Build the Docker image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/expense-tracker', '.']
 
-    # Step 2: Push image to Artifact Registry (or Container Registry)
-    - name: 'gcr.io/cloud-builders/docker'
-      args: ['push', 'gcr.io/$PROJECT_ID/expense-tracker']
+  # Push the image to Artifact Registry / Container Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/expense-tracker']
 
-    # Step 3: Deploy to Cloud Run with DB secrets + env vars
-    - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-      entrypoint: gcloud
-      args:
-        [
-          'run', 'deploy', 'expense-tracker',
-          '--image', 'gcr.io/$PROJECT_ID/expense-tracker',
-          '--region', 'us-east1',
-          '--platform', 'managed',
-          '--allow-unauthenticated',
-          '--set-secrets', 'SPRING_DATASOURCE_PASSWORD=expense-db-pass:latest',
-          '--set-env-vars', 'SPRING_DATASOURCE_USERNAME=postgres,DB_NAME=expense_db,INSTANCE_CONNECTION_NAME=expense-tracker-ryan:us-east1:expense-db'
-        ]
+  # Deploy to Cloud Run
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: gcloud
+    args:
+      [
+        'run', 'deploy', 'expense-tracker',
+        '--image', 'gcr.io/$PROJECT_ID/expense-tracker',
+        '--region', 'us-east1',
+        '--platform', 'managed',
+        '--allow-unauthenticated',
+        '--add-cloudsql-instances', 'expense-tracker-ryan:us-east1:expense-db',
+        '--set-env-vars', 'SPRING_DATASOURCE_USERNAME=postgres,SPRING_DATASOURCE_PASSWORD=Snoopy12!,SPRING_DATASOURCE_URL=jdbc:postgresql:///expense_db?cloudSqlInstance=expense-tracker-ryan:us-east1:expense-db&socketFactory=com.google.cloud.sql.postgres.SocketFactory'
+      ]
 
 images:
   - 'gcr.io/$PROJECT_ID/expense-tracker'
