--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,15 +3,15 @@ steps:
   - name: 'gcr.io/cloud-builders/mvn'
     args: ['clean', 'package', '-DskipTests']
 
-  # Build the Docker image
+  # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/expense-tracker', '.']
 
-  # Push the image to Artifact Registry / Container Registry
+  # Push the image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/expense-tracker']
 
-  # Deploy to Cloud Run
+  # Deploy to Cloud Run (no env vars since they're hardcoded)
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
@@ -21,8 +21,7 @@ steps:
         '--region', 'us-east1',
         '--platform', 'managed',
         '--allow-unauthenticated',
-        '--add-cloudsql-instances', 'expense-tracker-ryan:us-east1:expense-db',
-        '--set-env-vars', 'SPRING_DATASOURCE_USERNAME=postgres,SPRING_DATASOURCE_PASSWORD=Snoopy12!,SPRING_DATASOURCE_URL=jdbc:postgresql:///expense_db?cloudSqlInstance=expense-tracker-ryan:us-east1:expense-db&socketFactory=com.google.cloud.sql.postgres.SocketFactory'
+        '--add-cloudsql-instances', 'expense-tracker-ryan:us-east1:expense-db'
       ]
 
 images:
