Sync DB settings to expense_db in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # PostgreSQL via Cloud SQL Socket Factory
 spring.datasource.url=jdbc:postgresql:///expense_db?cloudSqlInstance=expense-tracker-ryan:us-east1:expense-db&socketFactory=com.google.cloud.sql.postgres.SocketFactory
 spring.datasource.username=postgres
-spring.datasource.password=Snoopy12!
+spring.datasource.password=Password123!
 
 # JPA / Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
