--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,28 +1,41 @@
 steps:
-  # Build the JAR with Maven
+  # Step 1: Build the JAR with Maven
   - name: 'gcr.io/cloud-builders/mvn'
-    args: ['clean', 'package', '-DskipTests']
-
-  # Build the container image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/expense-tracker', '.']
-
-  # Push the image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/expense-tracker']
-
-  # Deploy to Cloud Run (no env vars since they're hardcoded)
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
     args:
-      [
-        'run', 'deploy', 'expense-tracker',
-        '--image', 'gcr.io/$PROJECT_ID/expense-tracker',
-        '--region', 'us-east1',
-        '--platform', 'managed',
-        '--allow-unauthenticated',
-        '--add-cloudsql-instances', 'expense-tracker-ryan:us-east1:expense-db'
-      ]
+      - 'clean'
+      - 'package'
+      - '-DskipTests'
+
+  # Step 2: Build the container image
+  - name: 'gcr.io/cloud-builders/docker'
+    args:
+      - 'build'
+      - '-t'
+      - 'gcr.io/$PROJECT_ID/expense-tracker'
+      - '.'
+
+  # Step 3: Push the image
+  - name: 'gcr.io/cloud-builders/docker'
+    args:
+      - 'push'
+      - 'gcr.io/$PROJECT_ID/expense-tracker'
+
+  # Step 4: Deploy to Cloud Run
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: 'gcloud'
+    args:
+      - 'run'
+      - 'deploy'
+      - 'expense-tracker'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/expense-tracker'
+      - '--region'
+      - 'us-east1'
+      - '--platform'
+      - 'managed'
+      - '--allow-unauthenticated'
+      - '--add-cloudsql-instances'
+      - 'expense-tracker-ryan:us-east1:expense-db'
 
 images:
   - 'gcr.io/$PROJECT_ID/expense-tracker'
