Initial Azure deployment version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-# PostgreSQL via Cloud SQL Socket Factory
-spring.datasource.url=jdbc:postgresql:///expense_db?cloudSqlInstance=expense-tracker-ryan:us-east1:expense-db&socketFactory=com.google.cloud.sql.postgres.SocketFactory
-spring.datasource.username=postgres
-spring.datasource.password=Password123!
+spring.datasource.url=jdbc:postgresql://ryanpgserver.postgres.database.azure.com:5432/postgres
+spring.datasource.username=ryanadmin
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA / Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Optional: App port (Cloud Run uses PORT env var)
 server.port=${PORT:8080}
